# activate

./: .gitattributes  .gitignore  LICENCE  Makefile  README.md  activity.py  activity_list.py  activity_types.py  app  app.py  charts.py  edit_activity.ui  files.py  load_activity.py  load_fit.py  load_gpx.py  main.py  main.ui  number_formats.py  pyproject.toml  requirements.txt  server  settings.py  settings.ui  setup.cfg  setup.py  tables.py  times.py  track.py  ui.py  units.py
activate/: activity.py  activity_list.py  activity_types.py  files.py  geometry.py  load_activity.py  number_formats.py  serialise.py  times.py  track.py  units.py
activate/app/: __init__.py  activity_list.py  activity_summary.py  activity_view.py  app.py  charts.py  checklist.py  connect.py  dialogs.py  main.ui  maps.py  paths.py  photos.py  settings.py  social_tree.py  summary.py  tables.py  widgets.py
activate/app/dialogs/: __init__.py  activity.py  settings.py
activate/app/sync/: __init__.py  strava.py
activate/core/: activity.py  activity_list.py  activity_types.py  files.py  load_activity.py  number_formats.py  serialise.py  times.py  track.py  units.py
activate/core/filetypes/: __init__.py  fit.py  gpx.py  load_xml.py  tcx.py
activate/filetypes/: __init__.py  fit.py  gpx.py  load_xml.py  tcx.py
activate/resources/: init.sql
activate/resources/ui/: main.ui  settings.ui  summary.ui
activate/server/: __init__.py  server.py
resources/: init.sql
resources/ui/: activity_summary.ui  activity_view.ui  edit_activity.ui  main.ui  settings.ui
