[metadata]
name = Activate-App
version = 0.0.4
author = Tom Fryers
description = Activate is a free activity log and analysis tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/Tom_Fryers/activate
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
install_requires =
    dtw

[options.extras_require]
app =
    PyQt5
    PyQtChart
    PyQtWebEngine
    pyqtlet
    Markdown
    fitparse
    requests
server =
    flask

[options.entry_points]
gui_scripts =
    activate = activate.app:main [app]

[options.package_data]
activate.resources =
    ""
    "*"
    "*/*"
    "*/*/*"
    "*/*/*/*"
    "*/*/*/*/*"
    "*/*/*/*/*/*"
    "*/*/*/*/*/*/*"
